<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="10sp"
    android:background="@drawable/bglog1"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/popup_title"
            android:textColor="@color/dark_blue"
            android:textSize="12sp"
            android:layout_toStartOf="@+id/cross"
            android:layout_marginTop="10sp"/>
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/cross"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_alignParentEnd="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/cross_b"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        android:padding="8sp"
        android:drawableEnd="@drawable/ic_backarrow"/>
    <TextView
        android:id="@+id/nameOfDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/time_picker_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">
            <NumberPicker
                android:id="@+id/hourpicker"
                android:layout_width="wrap_content"
                android:layout_height="120sp"
                android:scaleY=".75"
                android:theme="@style/NumberPickerCustomText"
                android:background="@drawable/rectangle_14"
                android:layout_marginEnd="15sp"/>
            <NumberPicker
                android:id="@+id/minpicker"
                android:layout_width="wrap_content"
                android:layout_height="120sp"
                android:scaleY=".75"
                android:theme="@style/NumberPickerCustomText"
                android:background="@drawable/rectangle_14"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/available_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:padding="5sp"
            android:layout_marginStart="10sp"
            android:text="@string/idealTime"
            android:textColor="@color/dark_blue"
            android:textSize="10sp"
            android:layout_toEndOf="@+id/time_picker_layout"
            android:layout_alignBottom="@+id/time_picker_layout"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/minstore"
        android:layout_width="0sp"
        android:layout_height="0sp"/>
    <TextView
        android:id="@+id/hourstore"
        android:layout_width="0sp"
        android:layout_height="0sp"/>
    <LinearLayout
        android:id="@+id/confirm_appoin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="25sp"
        android:background="@drawable/rectangle_confirm">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/confirm_Appoinment"
            android:textColor="@color/dark"
            android:textSize="14sp"/>
    </LinearLayout>

</LinearLayout>