<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Activity.EditProfessionalInfoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_collapseMode="pin"
        app:contentInsetStartWithNavigation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Edit Professional Info"
            android:textColor="@color/dark_blue"
            android:textSize="24dp" />
    </androidx.appcompat.widget.Toolbar>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="60dp"
        android:layout_below="@+id/toolbar">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:boxStrokeColor="@color/dark"
                    android:textColorHint="@color/dark"
                    app:hintTextColor="@color/dark"
                    android:hint="BMDCID">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/bmdcid"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:paddingStart="15dp"
                        android:inputType="number"
                        android:textColorHint="@color/dark"
                        android:background="@null"
                        android:textColor="@color/dark"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:boxStrokeColor="@color/dark"
                    android:textColorHint="@color/dark"
                    app:hintTextColor="@color/dark"
                    android:hint="Designation">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/designation"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:paddingStart="15dp"
                        android:inputType="text"
                        android:textColorHint="@color/dark"
                        android:background="@null"
                        android:textColor="@color/dark"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:boxStrokeColor="@color/dark"
                    android:textColorHint="@color/dark"
                    app:hintTextColor="@color/dark"
                    android:hint="Degrees">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/degrees"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:paddingStart="15dp"
                        android:inputType="text"
                        android:textColorHint="@color/dark"
                        android:background="@null"
                        android:textColor="@color/dark"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:boxStrokeColor="@color/dark"
                    android:textColorHint="@color/dark"
                    app:hintTextColor="@color/dark"
                    android:hint="@string/Working_In">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/workingin"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:paddingStart="15dp"
                        android:inputType="text"
                        android:textColorHint="@color/dark"
                        android:background="@null"
                        android:textColor="@color/dark"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:boxStrokeColor="@color/dark"
                    android:textColorHint="@color/dark"
                    app:hintTextColor="@color/dark"
                    android:hint="Working Start Year"
                    android:clickable="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/workingExperience"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:paddingStart="15dp"
                        android:textColorHint="@color/dark"
                        android:background="@null"
                        android:textColor="@color/dark"
                        android:drawableEnd="@drawable/calendar"
                        android:focusable="false"
                        android:clickable="true"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:boxStrokeColor="@color/dark"
                    android:textColorHint="@color/dark"
                    app:hintTextColor="@color/dark"
                    android:hint="@string/Consult_Fee">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/consultfee"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:paddingStart="15dp"
                        android:inputType="number"
                        android:textColorHint="@color/dark"
                        android:background="@null"
                        android:textColor="@color/dark"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Consult_Hour"
                    android:paddingTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:paddingBottom="10dp"
                    android:textSize="16dp"
                    android:textColor="@color/dark"
                    android:fontFamily="@font/poppins"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/starttimestore"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="to"
                    android:layout_marginLeft="20dp"
                    android:textSize="16dp"
                    android:textColor="@color/dark"
                    android:fontFamily="@font/poppins"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/endrecyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/endtimestore"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Consult_Day"
                    android:paddingTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:paddingBottom="10dp"
                    android:textSize="16dp"
                    android:textColor="@color/dark"
                    android:fontFamily="@font/poppins"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/daysrecyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/buttonbg"
            android:fontFamily="@font/poppins_bold"
            android:text="Save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:backgroundTint="@null" />
    </RelativeLayout>
</RelativeLayout>